# ard-nav

./: .gitignore  CrashNotes.md  FieldReports.md  Makefile  README.md  connections.md  serialmonitor.sh
DisplayWIthLib/: DisplayWIthLib.ino
compass/: Makefile  compass.ino  version.h
compasscallibrate/: Makefile  compasscallibrate.ino  version.h
compasseg/: Makefile  compasseg.ino  version.h
esp32cam/: esp32cam.ino
gps/: Makefile  gps.ino  version.h
hwint/: Makefile  hwint.ino
lib/: Makefile  common  common.cmake  detectos  libcommon
logs/: 16689.CSV  16810.CSV  16911.CSV  16913.CSV  27Jun01.txt  8Jan23_route1.csv  8Jan23_route1_sample.csv  JuneAnalysis.xlsx  Sat17Jun.txt  Sat17Jun2.txt  Sat17Jun3.txt  Sat17Jun4.txt  Sat17Jun5.txt  Sat18Jun.txt  Sat18Jun4.txt  Sat1Jul.txt  Sat1Jul02.txt  Sat27Jun02.txt  Sat27Jun03.txt  sat.txt  (+12 more)
sim/: CMakeLists.txt  Makefile  README.md  sim.cpp  togps.sh
sim/Arduino/: Arduino.h
sim/Boat/: Boat.cpp  Boat.h  BoatTest.cpp  Makefile
sim/Compass/: Compass.cpp  Compass.h  CompassTest.cpp
sim/ConsoleLogger/: ConsoleLogger.cpp  ConsoleLogger.h
sim/Gps/: Gps.cpp  Gps.h  GpsTest.cpp  Makefile
sim/LiftDrag/: LiftDrag.cpp  LiftDrag.h  LiftDragTest.cpp  Makefile
sim/Logger/: Logger.h
sim/MServo/: MServo.cpp  MServo.h  MServoTest.cpp  Makefile
sim/Rudder/: Rudder.cpp  Rudder.h  RudderTest.cpp
sim/Sail/: Makefile  Sail.cpp  Sail.h  SailTest.cpp
sim/SatComm/: SatComm.cpp  SatComm.h
sim/Switches/: Switches.h
sim/Timer/: Timer.cpp  Timer.h
sim/WindSensor/: Makefile  WindSensor.cpp  WindSensor.h  WindSensorTest.cpp
(+222 files in other folders)
